@@ -29,11 +29,6 @@
 ;;; default is "$ENV{HOME}/.ssh/authorized_keys"
 ; authorized_keys_file=/home/gitprep/.ssh/authorized_keys
 
-;;; Suspects encoding list for source code character encoding (default:UTF-8)
-;;; set comma separated encoding list if your source code is different from UTF-8.
-;;; encoding name follow Perl encoding API.
-;encoding_suspects=cp932,UTF-8
-
 [admin]
 ;;; If you forget admin password,
 ;;; set this value to 1 and access /reset-password page.
