@@ -58,14 +58,6 @@ sub startup {
   }
   $git->bin($git_bin);
   
-  # Encoding suspects list for Git
-  my $encoding_suspects_str = $conf->{basic}{encoding_suspects};
-  my @encoding_suspects;
-  if ($encoding_suspects_str) {
-    @encoding_suspects = split /,/, $encoding_suspects_str;
-  }
-  $git->encoding_suspects(\@encoding_suspects);
-
   # Repository Manager
   my $manager = Gitprep::Manager->new;
   $manager->app($self);
